--- a/css/style.css
+++ b/css/style.css
@@ -97,17 +97,17 @@ hr {
   border-radius: 0;
   margin: 9px 20px 0;
 }
-#menu.navbar-default .navbar-nav > li > a:after {
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 0;
-  height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  content: "";
-  transition: width 0.2s;
-}
+    #menu.navbar-default .navbar-nav > li > a:after {
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 0;
+        height: 2px;
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+        content: "";
+        transition: width 0.2s;
+    }
 #menu.navbar-default .navbar-nav > li > a:hover:after {
   width: 100%;
 }
@@ -116,19 +116,19 @@ hr {
 .navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
-.navbar-default .navbar-nav > .active > a:after,
-.navbar-default .navbar-nav > .active > a:hover:after,
-.navbar-default .navbar-nav > .active > a:focus:after {
-  display: block !important;
-  position: absolute !important;
-  left: 0 !important;
-  bottom: -1px !important;
-  width: 100% !important;
-  height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
-  content: "" !important;
-  transition: width 0.2s !important;
-}
+    .navbar-default .navbar-nav > .active > a:after,
+    .navbar-default .navbar-nav > .active > a:hover:after,
+    .navbar-default .navbar-nav > .active > a:focus:after {
+        display: block !important;
+        position: absolute !important;
+        left: 0 !important;
+        bottom: -1px !important;
+        width: 100% !important;
+        height: 2px !important;
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%) !important;
+        content: "" !important;
+        transition: width 0.2s !important;
+    }
 .navbar-toggle {
   border-radius: 0;
 }
@@ -149,33 +149,33 @@ hr {
   margin-bottom: 15px;
   padding-bottom: 15px;
 }
-.section-title h2::after {
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  margin-left: -30px;
-  left: 50%;
-}
+    .section-title h2::after {
+        position: absolute;
+        content: "";
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+        height: 4px;
+        width: 60px;
+        bottom: 0;
+        margin-left: -30px;
+        left: 50%;
+    }
 .section-title p {
   font-size: 18px;
 }
 .btn-custom {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-  padding: 14px 34px;
-  letter-spacing: 1px;
-  margin: 0;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 25px;
-  transition: all 0.5s linear;
-  border: 0;
+    font-family: "Raleway", sans-serif;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #5ca9fb;
+    background-image: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+    padding: 14px 34px;
+    letter-spacing: 1px;
+    margin: 0;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 25px;
+    transition: all 0.5s linear;
+    border: 0;
 }
 .btn-custom:hover,
 .btn-custom:focus,
@@ -208,7 +208,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background: url(../img/analyve_bg.jpeg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -221,45 +221,51 @@ a:focus,
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 82px;
-  font-weight: 700;
+  font-size: 78px;
+  font-weight: 600;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 10px;
 }
-.intro h1 span {
-  font-weight: 800;
-  color: #5ca9fb;
-}
-.intro p {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 30px;
-  margin: 0 auto;
-  margin-bottom: 60px;
-}
+    .intro h1 span {
+        font-family: "Raleway", sans-serif;
+        text-transform: uppercase;
+        color: #fff;
+    }
+    .intro p {
+        color: #fff;
+        font-size: 22px;
+        font-weight: 300;
+        line-height: 30px;
+        margin: 0 auto;
+        margin-bottom: 60px;
+        background: -webkit-linear-gradient(0deg,rgba(255, 255, 255, 0.75), #f6f6f6);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        backdrop-filter: blur(15px);
+    }
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
-  text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
 }
 /* Features Section */
 #features {
   background: #f6f6f6;
 }
-#features i.fa {
-  font-size: 38px;
-  margin-bottom: 20px;
-  transition: all 0.5s;
-  color: #fff;
-  width: 100px;
-  height: 100px;
-  padding: 30px 0;
-  border-radius: 50%;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
-}
+    #features i.fa {
+        font-size: 38px;
+        margin-bottom: 20px;
+        transition: all 0.5s;
+        color: #fff;
+        width: 100px;
+        height: 100px;
+        padding: 30px 0;
+        border-radius: 50%;
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+    }
 /* About Section */
 #about {
   padding: 100px 0;
@@ -273,15 +279,15 @@ header .intro-text {
   margin-bottom: 15px;
   padding-bottom: 15px;
 }
-#about h2::after {
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  left: 0;
-}
+    #about h2::after {
+        position: absolute;
+        content: "";
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+        height: 4px;
+        width: 60px;
+        bottom: 0;
+        left: 0;
+    }
 #about .about-text li {
   margin-bottom: 6px;
   margin-left: 6px;
@@ -309,9 +315,9 @@ header .intro-text {
 }
 /* Services Section */
 #services {
-  padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: #fff;
+    padding: 100px 0;
+    background: linear-gradient(to left, #c190d6 0%, #4f5fee 100%);
+    color: #fff;
 }
 #services .service-desc {
   margin: 10px 10px 20px;
@@ -329,16 +335,16 @@ header .intro-text {
   margin-left: -30px;
   left: 50%;
 }
-#services i.fa {
-  font-size: 42px;
-  width: 120px;
-  height: 120px;
-  padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  border-radius: 50%;
-  color: #fff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
-}
+    #services i.fa {
+        font-size: 42px;
+        width: 120px;
+        height: 120px;
+        padding: 40px 0;
+        background: linear-gradient(to right, #c190d6 0%, #4f5fee 100%);
+        border-radius: 50%;
+        color: #fff;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+    }
 #services h3 {
   font-weight: 500;
   padding: 5px 0;
@@ -459,9 +465,9 @@ header .intro-text {
 }
 /* Contact Section */
 #contact {
-  padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: rgba(255, 255, 255, 0.75);
+    padding: 100px 0 60px;
+    background: linear-gradient(to left, #c190d6 0%, #4f5fee 100%);
+    color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
   margin-bottom: 40px;
